Changes from jTDS 1.2.2
=======================

08/14/2009 - Holger Rehn
 o Corrected bug [2181003], attempt to set a BC date invalidates
   driver state. 

08/11/2009 - Holger Rehn
 o Corrected bug by packporting patch [2675463], getSchemas() now returns
   schemas, not database users for MSSQL 2005 and later.

10/08/2009 - Holger Rehn
 o Corrected bug [1855125], jTDS silently ignores integer overflows in
   ResultSet's getter methods.

08/08/2009 - Holger Rehn
 o Corrected bug [1755448], login failure leaves unclosed sockets.
 o Added missing finalizer in connection class to ensure resources are released
   if an application fails to close a connection.

08/07/2009 - Holger Rehn
 o Corrected bug [2340241] by adding a new connection property 'processId'.
 o Addressed feature request [1778933] by adding a new connection property
   'socketKeepAlive'.

08/04/2009 - Holger Rehn
 o Corrected bug [1845477], Added missing license info.
 o Resolved issue [1955499], Performance problems with timestamps in
   multi-threaded applications.
 o Corrected bug [1793584], Login timeout canceled too early. 

08/03/2009 - Holger Rehn
 o Corrected bug [1802986], incorrect charset mapping between 'MAC'
   and 'ISO-8859-1'.
 o Resolved problem [1957748], Java VM is leaking memory in
   File.deleteOnExit().
   See http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6664633.

07/31/2009 - Holger Rehn
 o Corrected bug [2508201], date field is changed by 3 milliseconds.

07/30/2009 - Holger Rehn
 o Corrected bug [2796385], running out of UDP sockets.

07/27/2009 - Holger Rehn
 o Corrected bug [1869156] memory leak of WeakReferences.
 o Corrected data truncation problem described in bug [2021839].
 o Corrected bug [1811383] ArrayIndexOutOfBounds on executeBatch.

07/26/2009 - Holger Rehn
 o Corrected bug [2021839] savepoint starts 2 transactions if it's the first
   operation.

07/25/2009 - Holger Rehn
 o Corrected bug [1843801] infinite loop if DB connection dies during a batch.