@@ -123,6 +123,7 @@ error.convert.badtypeconst=Unable to convert value to {0}.
 error.convert.badtypes=Unable to convert between {0} and {1}.
 error.cursoropen.fail=Cursor failed to open.
 error.datetime.range=Only dates between January 1, 1753 and December 31, 9999 are accepted.
+error.datetime.range.era=Only dates in the AD era are accepted.
 error.dbmeta.nouser=Unable to determine the user name.
 error.driver.badurl=The syntax of the connection URL ''{0}'' is invalid.
 error.generic.badoption=Invalid option value ''{0}'' for parameter {1}.
